# dr_scaffold

./: .gitattributes  .gitignore  .mypy.ini  .pylintrc  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  PYPIREADME.rst  README.md  README.rst  manage.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: test.yml
Scripts/: check  check.sh  format  format.sh  test  test.sh
blog/: admin.py  models.py  serializers.py  urls.py  views.py
blog/migrations/: 0001_initial.py
core/: generators.py
core/management/commands/: drf_scaffold.py
core/scaffold_templates/: admin_templates.py  model_templates.py
dr_scaffold/: __init__.py  asgi.py  file_api.py  generators.py  print_off.py  settings.py  urls.py  wsgi.py
dr_scaffold/management/commands/: dr_scaffold.py
dr_scaffold/scaffold_templates/: admin_templates.py  app_template.py  factory_templates.py  factory_tests_templates.py  model_templates.py  serializer_templates.py  url_templates.py  view_templates.py
dr_scaffold_core/: apps.py  file_api.py  generators.py
dr_scaffold_core/management/commands/: dr_scaffold.py
dr_scaffold_core/scaffold_templates/: url_templates.py
drf_scaffold/: asgi.py  settings.py  urls.py  wsgi.py
drf_scaffold_core/: apps.py  file_api.py  generators.py
drf_scaffold_core/scaffold_templates/: model_templates.py  serializer_templates.py  url_templates.py  view_templates.py
tests/: test_command.py  test_file_api.py  test_generator.py  tests.py
(+1 files in other folders)
