[metadata]
name = dr_scaffold-Abdenasser
version = v0.6-alpha
author = Abdenasser Elidrissi
author_email = nasser.elidrissi065@gmail.com
description = a Django package for scaffolding django rest apis using cli
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Abdenasser/dr_scaffold
project_urls =
    Bug Tracker = https://github.com/Abdenasser/dr_scaffold/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = dr_scaffold_core
packages = find:
python_requires = >=3.6

[options.packages.find]
where = dr_scaffold_core